--- a/colorChanger.html
+++ b/colorChanger.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        
+        *{
+            background-color: black;
+            color: white;
+        }
+        .Button{
+            width: 50px;
+            height: 50px;
+        }
     </style>
     <title> COLOR CHANGER </title>
 </head>
