--- a/colorChanger.html
+++ b/colorChanger.html
@@ -4,21 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        *{
+        body{
             background-color: black;
             color: white;
+            align-items: center;
+            text-align: center;
+        }
+        .Container{
+            display: flex;
+            justify-content: space-evenly;
         }
         .Button{
-            width: 50px;
-            height: 50px;
+            width: 200px;
+            height: 200px;
+            border: 2px solid white;
+            margin: 5px;
+        }
+        #gray{
+            background-color: gray;
+        }
+        #green{
+            background-color: green;
+        }
+        #yellow{
+            background-color: yellow;
+        }
+        #red{
+            background-color: red;
         }
     </style>
     <title> COLOR CHANGER </title>
 </head>
 <body>
+    <h1> COLOR CHANGER </h1>
+<div class="Container">
+
     <div class="Button" id="gray"></div>
     <div class="Button" id="green"></div>
     <div class="Button" id="yellow"></div>
     <div class="Button" id="red"></div>
+
+</div>
+
+<script src="colorChanger.js"></script>
 </body>
 </html>
