Made Small Changes

--- a/Home.html
+++ b/Home.html
@@ -7,27 +7,27 @@
     <title> HOME PAGE </title>
 </head>
 <body>
-    <header>
-        <h1>PROJECTS</h1>
-    </header>
-    <main>
-        <div>
+    <h1> PROJECTS </h1>
 
-            <div class="Link"> 
-                <a href="colorChanger.html"> PROJECT ONE - COLOR CHANGER 🔥</a>
-            </div>
+    <div class="Container">
 
-            <div class="Link">
-                <a href="bmiGenerator.html"> PROJECT TWO - BMI GENERATOR </a>
-            </div>
-
-            <div class="Link"> 
-                <a href=""></a>
-            </div>
-
-            <div class="Link"></div>
-
+        <div class="Links">
+            <a href="colorChanger.html"> PROJECT ONE - COLOR CHANGER </a>            
         </div>
-    </main>
+
+        <div class="Links">
+            <a href="">PROJECT TWO - BMI GENERATOR </a>
+        </div>
+
+        <div class="Links">
+            <a href="">PROJECT THREE - DIGITAL CLOCK </a>
+        </div>
+
+        <div class="Links">
+            <a href="">PROJECT FOUR -</a>
+        </div>
+
+
+    </div>
 </body>
 </html>
