Bmi generator is started

--- a/Home.html
+++ b/Home.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="Links">
-            <a href="">PROJECT TWO - BMI GENERATOR </a>
+            <a href="bmiGenerator.html">PROJECT TWO - BMI GENERATOR </a>
         </div>
 
         <div class="Links">
@@ -24,7 +24,7 @@
         </div>
 
         <div class="Links">
-            <a href="">PROJECT FOUR -</a>
+            <a href="">PROJECT FOUR - GUESS THE NUMBER </a>
         </div>
 
 
