BMI Generaator Completed

--- a/bmiGenerator.html
+++ b/bmiGenerator.html
@@ -16,5 +16,7 @@
             <button> CALCULATE </button>
         </fieldset>
     </form>
+
+    <script src="BMIscript.js"></script>
 </body>
 </html>
