digital cock completed and half guess the number game

--- a/Home.html
+++ b/Home.html
@@ -20,11 +20,11 @@
         </div>
 
         <div class="Links">
-            <a href="">PROJECT THREE - DIGITAL CLOCK </a>
+            <a href="digitalClock.html">PROJECT THREE - DIGITAL CLOCK </a>
         </div>
 
         <div class="Links">
-            <a href="">PROJECT FOUR - GUESS THE NUMBER </a>
+            <a href="guessTheNumber.html">PROJECT FOUR - GUESS THE NUMBER </a>
         </div>
 
 
