Guess the Number Completed

--- a/guessTheNumber.html
+++ b/guessTheNumber.html
@@ -24,6 +24,7 @@
         <div class="resultParas">
             <p>Previous Guess : <span class="guesses"></span></p>
             <p>Guess remaining : <span class="lastResult"></span></p>
+            <p class="lowOrHi"></p>
         </div>
 
     </div>
