Added two new projects

--- a/Home.html
+++ b/Home.html
@@ -27,6 +27,13 @@
             <a href="guessTheNumber.html">PROJECT FOUR - GUESS THE NUMBER </a>
         </div>
 
+        <div class="Links">
+            <a href="unlimetedColorChanger.html"> PROJECT FIVE - UNLIMITED COLOR CHANGER </a>
+        </div>
+
+        <div class="Links">
+            <a href="pressTheKeyEvents.html.html"> PROJECT SIX - PRESS THE KEY AND SEE MAGIC </a>
+        </div>
 
     </div>
 </body>
