TO DO APP COMPLETED

--- a/Home.html
+++ b/Home.html
@@ -35,6 +35,10 @@
             <a href="pressTheKeyEvents.html.html"> PROJECT SIX - PRESS THE KEY AND SEE MAGIC </a>
         </div>
 
-    </div>
+        <div class="Links">
+            <a href="toDoList.html"> PROJECT SEVEN - TO DO LIST APP </a>
+        </div>
+
+    </div> 
 </body>
 </html>
