--- a/toDoList.html
+++ b/toDoList.html
@@ -23,45 +23,20 @@
 
     <main>
 
-        <div class="mainContent">
+       <textarea name="" id="Input" cols="200" rows="10"></textarea>
+       <button id="addToList"> ADD TO LIST </button>
 
-            <div class="toDoList">
-
-            </div>
-
-            <div class="addORdelet">
-
-                <div class="box" id="addList">
-                    <h2>ADD NEW ITEM</h2>
-
-                    <div id="Items">
-
-
-
-                        <button>ADD ITEM</button>
-
-                    </div>
-
-                </div>
-
-                <div class="box" id="deletedItem">
-                    <h2>DELETED ITEM</h2>
-
-                    <div id="Items">
-                        
-
-
-                        <button>CLEAR ALL</button>
-
-                    </div>
-
-                </div>
-
-
-            </div>
-
+        <div id="list">
+            <ol id="Iteratable">
+                
+            </ol>
         </div>
 
+        <input type="checkbox" name="" id="Tick">
+
     </main>
+
+    <script src="toDoList.js"></script>
+
 </body>
 </html>
