added New projects in list

--- a/Home.html
+++ b/Home.html
@@ -39,6 +39,30 @@
             <a href="toDoList.html"> PROJECT SEVEN - TO DO LIST APP </a>
         </div>
 
+        <div class="Links">
+            <a href="Weather.html"> PROJECT EIGHT - WEATHER APP </a>
+        </div> 
+
+        <div class="Links">
+            <a href="Calculator.html"> PROJECT NINE - BASIC CALCULATOR </a>
+        </div>
+
+        <div class="Links">
+            <a href="quoteGenerator.html"> PROJECT TEN - QUOTE GENERATOR </a>
+        </div>
+
+        <div class="Links">
+            <a href="Blog.html"> PROJECT ELEVEN - BLOG </a>
+        </div>
+
+        <div class="Links">
+            <a href="photoGallery.html"> PROJECT TWELVE - PHOTO GALLERY </a>
+        </div>
+
+        <div class="Links">
+            <a href="countdownTimer.html"> PROJECT THIRTEEN - COUNTDOWN TIMER </a>
+        </div>
+
     </div> 
 </body>
 </html>
